plugins {
    id 'org.xtext.xtend' version '2.0.1'
    id 'net.researchgate.release' version '2.6.0'
    id 'com.jfrog.bintray' version '1.7.3'
}

subprojects {
    repositories {
        jcenter()
        mavenCentral()
        maven {
            url  "http://dl.bintray.com/franzbecker/maven" 
        }
    }
    
    apply plugin: 'java'
    apply plugin: 'org.xtext.xtend'
    apply plugin: 'eclipse'
    apply plugin: 'idea'
    apply plugin: 'maven'
    
    group = 'org.testeditor.web'

    ext.versions = [
        dropwizard: '1.3.7',
        xtext: '2.15.0'
    ]

    sourceCompatibility = '1.10'
    targetCompatibility = '1.10'
    
    apply from: "$rootDir/gradle/publishing.gradle"

	sourceSets {
  		main.xtendOutputDir = 'src/main/xtend-gen'
  		test.xtendOutputDir = 'src/test/xtend-gen'
	}

    configurations.all {
	    exclude group: 'asm'
        resolutionStrategy {
            force "org.antlr:antlr-runtime:3.2"
            force "org.eclipse.emf:org.eclipse.emf.ecore:$versions.xtext"
            // force 'org.eclipse.platform:org.eclipse.equinox.common:3.10.0' // see https://github.com/eclipse/xtext/issues/1231
            force 'org.eclipse.platform:org.eclipse.core.runtime:3.15.0'
        }
    }


    dependencies {

        compile "org.eclipse.xtend:org.eclipse.xtend.lib:$versions.xtext"
        compile "com.google.inject:guice:4.2.+"
        compile 'javax.annotation:javax.annotation-api:1.3.2'
        compile 'javax.xml.bind:jaxb-api:2.3.0'
        // compile 'com.sun.xml.bind:jaxb-core:2.3.0'
        // compile 'com.sun.xml.bind:jaxb-impl:2.3.0'
        // compile 'org.glassfish.jaxb:jaxb-runtime:2.3.0'
        compile 'javax.activation:activation:1.1.1'
        // compile 'com.sun.activation:javax.activation:1.2.0'

        // compile "javax.xml.bind:jaxb-api:2.3.0"
        // compile "javax.activation:activation:1.1"
        // compile "com.sun.xml.bind:jaxb-impl:2.3.0"
        // compile "com.sun.xml.bind:jaxb-core:2.3.0"
        // compile "com.sun.xml.ws:rt:2.3.0"
        // compile "com.sun.xml.ws:jaxws-rt:2.3.0"
    }

    // test {
    //     doFirst {
    //         jvmArgs = [
    //             '--add-modules', 'ALL-SYSTEM',
    //             '--add-modules', 'java.xml.bind'
    //         ]
    //     }
    // }
}

release {
    preTagCommitMessage = '[release]'
    tagCommitMessage = '[release]'
    newVersionCommitMessage = '[release] new version'
    tagTemplate = 'v${version}'
}
